# indoor-autonomous-navigation-slam-nav2

./: README.md
config/slam_toolbox/: slam_toolbox_gp_loop.yaml
src/differential_odom/: package.xml  setup.cfg  setup.py
src/differential_odom/differential_odom/: differential_odom_node.py
src/gp_bringup_v/: CMakeLists.txt  package.xml
src/gp_bringup_v/launch/: robot_bringup_v.launch.py
src/gp_description/: CMakeLists.txt  package.xml
src/gp_description/urdf/: gp_robot.urdf.xacro  gp_robot.urdf.xacro.bak_20260515_0110
src/gp_localization/: CMakeLists.txt  package.xml
src/gp_localization/config/: ekf_2wd.yaml
src/gp_localization/launch/: ekf_2wd.launch.py
src/gp_nav2/: CMakeLists.txt  package.xml
src/gp_nav2/behavior_trees/: gp_navigate_to_pose.xml  gp_navigate_to_pose_supervised.xml
src/gp_nav2/config/: .gp_nav2_params.yaml.swp  gp_mission_supervisor.yaml  gp_nav2_params.yaml
src/gp_nav2/gp_nav2/: gp_goal_pose_relay.py  gp_mission_supervisor.py  gp_mission_supervisor_v2.py  gp_route_memory_manager.py
src/gp_nav2/launch/: gp_nav2_bringup.launch.py
src/gp_velocity_manager/: CMakeLists.txt  package.xml
src/gp_velocity_manager/launch/: velocity_manager_motor.launch.py
src/gp_velocity_manager/src/: velocity_manager.cpp
src/motor_serial_driver/: package.xml  setup.cfg  setup.py
src/motor_serial_driver/motor_serial_driver/: motor_serial_driver.py  motor_serial_driver.py.back
