<?xml version="1.0"?>
<package format="3">
  <name>gp_velocity_manager</name>
  <version>0.0.1</version>
  <description>C++ velocity manager for filtering, ramping, and boosting cmd_vel before the motor serial driver.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
